--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "drupal/core-recommended": "^11.0",
         "drupal/devel": "^5.3",
         "drupal/field_group": "^3.6",
+        "drupal/restui": "^1.22",
         "drush/drush": "^13.0"
     },
     "require-dev": {
