--- a/web/modules/custom/react_list/react_list.info.yml
+++ b/web/modules/custom/react_list/react_list.info.yml
@@ -2,4 +2,5 @@ name: react_list
 description: 'A simple React - Drupal 11 module'
 type: module
 core_version_requirement: ^10 || ^11 || ^12
-
+dependencies:
+  - drupal:node
